--- a/AppLogic/AppLogicText.no.resx
+++ b/AppLogic/AppLogicText.no.resx
@@ -745,4 +745,8 @@
     <value>Eier ikke funnet</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="DefaultDocumentsDirectoryName" xml:space="preserve">
+    <value>Slipesteinsdatabaser</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
 </root>
