--- a/AppLogic/AppLogicText.ru.resx
+++ b/AppLogic/AppLogicText.ru.resx
@@ -745,4 +745,8 @@
     <value>Владелец не найден</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="DefaultDocumentsDirectoryName" xml:space="preserve">
+    <value>Базы данных точильных камней</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
 </root>
