--- a/AppLogic/AppLogicText.sk.resx
+++ b/AppLogic/AppLogicText.sk.resx
@@ -745,4 +745,8 @@
     <value>Majiteľ sa nenašiel</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="DefaultDocumentsDirectoryName" xml:space="preserve">
+    <value>databázy brúsnych kameňov</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
 </root>
