--- a/AppLogic/AppLogicText.sv.resx
+++ b/AppLogic/AppLogicText.sv.resx
@@ -745,4 +745,8 @@
     <value>Ägare inte hittat</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="DefaultDocumentsDirectoryName" xml:space="preserve">
+    <value>Slipstensdatabaser</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
 </root>
