--- a/AppLogic/AppLogicText.fi.resx
+++ b/AppLogic/AppLogicText.fi.resx
@@ -745,4 +745,8 @@
     <value>Omistaja ei löytynyt</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="DefaultDocumentsDirectoryName" xml:space="preserve">
+    <value>Grindstone-tietokannat</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
 </root>
