--- a/Wpf/WpfText.ru.resx
+++ b/Wpf/WpfText.ru.resx
@@ -1237,4 +1237,8 @@
     <value>Если вы продолжите, отображаемый в данный момент представление и его столбцы будут постоянно удалены.Записи, отображаемые его, не будут удалены.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="StopwatchOperationsEUA" xml:space="preserve">
+    <value>Операции секундомера начинаются с контекста срез времени, который вы в настоящее время сроки.Если вы хотели бы совокупную информацию (например, счетчик, максимум, мин, сумму и т. Д.) Из присвоения, лица, элемента рабочего элемента или значения списка, связанного с нарезом текущего времени, используйте соответствующее запрос в функцию контекста, чтобы указатьСвязанная сущность, из которого для агрегата.</value>
+    <comment>from GoogleTranslator2</comment>
+  </data>
 </root>
