--- a/Wpf/WpfText.fi.resx
+++ b/Wpf/WpfText.fi.resx
@@ -1237,4 +1237,8 @@ Rikokas kaavan ilmaisu:
     <value>Jos jatkat, tällä hetkellä näkyvä näkymä ja sen sarakkeet poistetaan pysyvästi.Sitä näytettävät merkinnät eivät poisteta.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="StopwatchOperationsEUA" xml:space="preserve">
+    <value>Sekuntikello Toiminnot alkavat tällä hetkellä ajastuksen aikaviipaleesta.Jos haluat yhdistää tietoja (esim. Laskea, max, min, summa jne.) Tehtävästä, henkilöstä, työpaikasta tai luettelosta, joka liittyy nykyiseen aikaviipaleen, käytä asianmukaista kyselyä kontekstitoiminnossa osoittamaansiihen liittyvä yksikkö, josta aggregaatti.</value>
+    <comment>from GoogleTranslator2</comment>
+  </data>
 </root>
